--- a/fruitynana/src/app/globals.css
+++ b/fruitynana/src/app/globals.css
@@ -1,6 +1,12 @@
+/* globals.css */
+@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300;400;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
 
 :root {
   --background: #ffffff;
@@ -17,5 +23,6 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Jura', sans-serif;
 }
+
