--- a/banana/src/components/dashboard/dashboard.css
+++ b/banana/src/components/dashboard/dashboard.css
@@ -11,13 +11,13 @@
 }
 
 /* Header */
-.dashboard-header {
+.dashboard-header-1 {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #f8f8f800;
-  padding: 15px;
+  padding: 10px;
   border-radius: 8px;
 }
 
@@ -99,12 +99,84 @@
   color: white;
   border-radius: 8px;
   cursor: pointer;
-  transition: background-color 0.2s;
+  transition: background-color 0.2s, transform 0.5s ease; /* Add transform transition */
+  
 }
 
 .start-button:hover {
   background-color: #e6b800;
+  transform: scale(1.05); /* Smoothly scale the button */
+  transition: background-color 0.2s, transform 0.3s ease; /* Add transform transition */
+  
 }
+
+/* Button57.css */
+.button-57 {
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #18181a;
+  color: #18181a;
+  display: inline-block;
+  font-size: 20px;
+  line-height: 15px;
+  padding: 18px 18px 17px;
+  text-decoration: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background: #ffd634;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 300px;
+}
+
+.button-57 span:first-child {
+  position: relative;
+  transition: color 600ms cubic-bezier(0.48, 0, 0.12, 1);
+  z-index: 10;
+}
+
+.button-57 span:last-child {
+  color: white;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  transition: all 500ms cubic-bezier(0.48, 0, 0.12, 1);
+  z-index: 100;
+  opacity: 0;
+  top: 50%;
+  left: 50%;
+  transform: translateY(225%) translateX(-50%);
+  height: 14px;
+  line-height: 13px;
+}
+
+.button-57:after {
+  content: "";
+  position: absolute;
+  bottom: -50%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  transform-origin: bottom center;
+  transition: transform 600ms cubic-bezier(0.48, 0, 0.12, 1);
+  transform: skewY(9.3deg) scaleY(0);
+  z-index: 50;
+}
+
+.button-57:hover:after {
+  transform-origin: bottom center;
+  transform: skewY(9.3deg) scaleY(2);
+}
+
+.button-57:hover span:last-child {
+  transform: translateX(-50%) translateY(-100%);
+  opacity: 1;
+  transition: all 900ms cubic-bezier(0.48, 0, 0.12, 1);
+}
+
+
 
 /* Add this to dashboard.css */
 .question-icon-container {
