--- a/banana/src/components/game/game.css
+++ b/banana/src/components/game/game.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    min-height: 90vh;
     background-color: white;
     font-family: 'Jost', sans-serif;
     padding: 20px;
@@ -19,7 +19,8 @@
     padding: 10px 20px;
   }
   
-  .logo-container {
+  .logo-container-game {
+    margin-top: -10rem;
     display: flex;
     align-items: center;
     gap: 10px;
@@ -29,13 +30,15 @@
     width: 50px;
   }
   
-  .timer {
+  .timer-game {
+    margin-top: -2px;
     font-size: 24px;
     font-weight: bold;
-    color: black;
+    color: rgb(0, 0, 0);
   }
   
-  .icons-container {
+  .icons-container-game {
+    margin-top: -10rem;
     display: flex;
     gap: 10px;
   }
