--- a/banana/src/components/landing/landing.css
+++ b/banana/src/components/landing/landing.css
@@ -11,12 +11,12 @@
   /* Banana Logo in Top-Left */
   .banana-logo {
     position: absolute;
-    top: 50px;
-    left: 50px;
+    top: 100px;
+    left: 100px;
   }
   
   .banana-logo img {
-    width: 150px; /* Adjust size of the banana logo */
+    width: 100px; /* Adjust size of the banana logo */
     height: auto;
   }
   
@@ -30,8 +30,8 @@
   }
   
   .circle {
-    width: 150px;
-    height: 150px;
+    width: 250px;
+    height: 250px;
     background-color: #facc15; /* Yellow color */
     border-radius: 50%;
   }
@@ -42,7 +42,18 @@
     bottom: 10px;
     left: 100px;
     font-size: 350px; /* Adjust font size */
-    font-weight: 200; /* Thin font */
+    font-weight: 150; /* Thin font */
+    color: black;
+    margin: 0;
+    font-family: "Jost", sans-serif;
+  }
+
+  .welcome-text-2 {
+    position: absolute;
+    bottom: -240px;
+    left: 1240px;
+    font-size: 20px; /* Adjust font size */
+    font-weight: 400; /* Thin font */
     color: black;
     margin: 0;
     font-family: "Jost", sans-serif;
@@ -51,10 +62,10 @@
   /* Next Button in Bottom-Right */
   .next-button {
     position: absolute;
-    bottom: 150px;
-    right: 50px;
-    width: 150px;
-    height: 150px;
+    bottom: 130px;
+    right: 100px;
+    width: 200px;
+    height: 200px;
     border: 2px solid black;
     border-radius: 50%;
     display: flex;
@@ -71,8 +82,9 @@
   }
   
   .arrow-icon {
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
+    font-weight: 200;
   }
   
   
