--- a/banana/src/components/dashboard/dashboard.css
+++ b/banana/src/components/dashboard/dashboard.css
@@ -119,7 +119,7 @@
   display: inline-block;
   font-size: 20px;
   line-height: 15px;
-  padding: 18px 18px 17px;
+  padding: 18px 18px 18px 18px;
   text-decoration: none;
   border-radius: 5px;
   cursor: pointer;
@@ -158,7 +158,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: rgb(145, 145, 145);
   transform-origin: bottom center;
   transition: transform 600ms cubic-bezier(0.48, 0, 0.12, 1);
   transform: skewY(9.3deg) scaleY(0);
@@ -174,6 +174,10 @@
   transform: translateX(-50%) translateY(-100%);
   opacity: 1;
   transition: all 900ms cubic-bezier(0.48, 0, 0.12, 1);
+}
+
+.build{
+  margin-top: 4px;
 }
 
 
